--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   percent_indicator: ^4.2.3
   smooth_page_indicator:
+  fl_chart:
 
 dev_dependencies:
   flutter_test:
